fix “Cannot find module ‘marked’” by making it a dependency, not devDependency
- tentatively fixes #66, npm link doesn’t ever fail on a fresh
  linux box, while a global install of the package from npm always fails
  thus I am assuming its fixed but will need to verify when the package
  is published

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "dependencies": {
     "yeoman-generator": "~0.14.0",
-    "chalk": "~0.3.0"
+    "chalk": "~0.3.0",
+    "marked": "~0.2.10"
   },
   "devDependencies": {
     "chai": "~1.8.1",
@@ -39,8 +40,7 @@
     "grunt-mocha": "~0.4.0",
     "grunt-contrib-copy": "~0.4.1",
     "mocha": "~1.10.0",
-    "sinon": "~1.7.3",
-    "marked": "~0.2.10"
+    "sinon": "~1.7.3"
   },
   "engines": {
     "node": ">=0.8.0"
